feat: complete role-based system (admin, user) across backend and frontend
- Implement role authorization
- Fix Redis cache ClassCastException
- Refactor BlogPost service and DTO
- Integrate frontend with backend APIs
- Resolve port and environment issues